dev/03-databases/mssql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mssql
  labels:
    name: mssql
    environment: dev
